changed nav bar back to divs, fixed spacing between nav items

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    
 }
 
 a {
@@ -17,6 +18,47 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+.nav-about {
+    flex-basis: 20px;
+    padding: 0px 10px 0px 10px
+    
+}
+
+.nav-store {
+    flex-basis: 30px;
+    padding: 0px 10px 0px 10px
+}
+
+.nav-space {
+    
+    flex-grow: 1;
+}
+
+.nav-gmail {
+    flex-basis: 20px;
+    padding: 0px 10px 0px 10px
+}
+
+.nav-images {
+    flex-basis: 20px;
+    padding: 0px 10px 0px 10px
+}
+
+.nav-apps {
+    flex-basis: 0px;
+    padding: 0px 10px 0px 10px
+}
+
+.nav-sign-in {
+    color: white;
+    flex-basis: 70px;
+    padding: 8px 0px 8px 0px;
+    background-color: #4285f4;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 3px;
 }
 
 #search {
